fix build.gradle.kts